<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FollowWalletFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="177dp"
            android:layout_height="32dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="COIN STATISTICS:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="149dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="135dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="KOL:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="149dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="EXCHANGES:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="149dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="468dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="STUDY:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Coingecko:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/coingeckoLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Coinmarketcap:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/coinmarketcapLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Changpeng Zhao(CZ):"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Sam Bankman-Fried(Sam):"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/CZLink"
            android:textColor="#FFFFFF"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Vitalik Buterin:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/SamLink"
            android:textColor="#FFFFFF"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintStart_toEndOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/VitalikLink"
            android:textColor="#FFFFFF"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Elon Musk:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/ElonMuskLink"
            android:textColor="#FFFFFF"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintStart_toEndOf="@+id/textView22" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Binance:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="MEXC:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Bybit:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Ivan on Tech:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="The Crypto Lark:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Data Dash:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Andreas Antonopoulos:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Coin Bureau:"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/BinanceLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/MexcLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView26"
            app:layout_constraintStart_toEndOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/BybitLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/IvanOnTechLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/TheCryptoLarkLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView30"
            app:layout_constraintStart_toEndOf="@+id/textView30" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/DataDashLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView31"
            app:layout_constraintStart_toEndOf="@+id/textView31" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/AndreasAntonopoulosLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView32"
            app:layout_constraintStart_toEndOf="@+id/textView32" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/CoinBureauLink"
            android:textColorLink="#2196F3"
            android:autoLink="web"
            app:layout_constraintBottom_toBottomOf="@+id/textView33"
            app:layout_constraintStart_toEndOf="@+id/textView33" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>